--- a/notebook/MenuNER.ipynb
+++ b/notebook/MenuNER.ipynb
@@ -103,7 +103,7 @@
     "from datasets.metric import temp_seed\n",
     "from torch.cuda.amp import GradScaler\n",
     "from ner.util import to_device, evaluation\n",
-    "from seqeval.metrics import precision_score, f1_score, recall_score\n",
+    "from seqeval.metrics import precision_score, f1_score, recall_score, classification_report\n",
     "from easydict import EasyDict as edict"
    ],
    "metadata": {
@@ -141,18 +141,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "### Here is not used the Argument parser but all the arguments are inserted in the following dictionary."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -163,7 +151,6 @@
     "        'seed' : 1000,\n",
     "        'train' : 'train.txt',\n",
     "        'max_length' : 512,\n",
-    "        'test' : 'test.txt',\n",
     "        'val' : 'valid.txt',\n",
     "        'pos' : True,\n",
     "        'char' : True,\n",
@@ -172,7 +159,7 @@
     "        'char_embedding_dim' : 25,\n",
     "        'lr' : 1e-3,\n",
     "        'epochs' : 30,\n",
-    "        'eval_and_save_steps' : 300\n",
+    "        'eval_and_save_steps' : 500\n",
     "        })"
    ],
    "metadata": {
@@ -288,7 +275,7 @@
     "\n",
     "      best_f1_score = - float('inf')\n",
     "      best_f1_score_epoch = 0\n",
-    "      path_checkpoint = './train_model_checkpoint.pt'  # modified\n",
+    "      path_checkpoint = '/content/drive/MyDrive/DNLP_Polito/Model/ELEONORA/model.pt'\n",
     "      for epoch in range(opt.epochs):\n",
     "          train_loss = 0.\n",
     "          local_best_eval_loss = float('inf')\n",
@@ -488,8 +475,8 @@
     "\n",
     "    test_examples = dataner_preprocess(opt.data_dir, opt.test)\n",
     "    input_feats_test = convert_examples_to_feature(test_examples)\n",
-    "    dataset_val = MenuDataset(input_feats_test)\n",
-    "    valid_loader = DataLoader(dataset=dataset_val,\n",
+    "    dataset_test = MenuDataset(input_feats_test)\n",
+    "    test_loader = DataLoader(dataset=dataset_test,\n",
     "                              batch_size=8,\n",
     "                              shuffle=True)\n",
     "\n",
@@ -516,17 +503,20 @@
     "    checkpoint = torch.load(opt.model_path)\n",
     "    model.load_state_dict(checkpoint)\n",
     "\n",
-    "    report = evaluation(model, valid_loader, device)\n",
+    "    result = evaluation(model, test_loader, device)\n",
     "\n",
     "    logs = {\n",
-    "        'precision': report['precision'],\n",
-    "        'f1': report['f1'],\n",
-    "        'recall': report['recall']\n",
+    "        'precision': result['precision'],\n",
+    "        'f1': result['f1'],\n",
+    "        'recall': result['recall']\n",
     "    }\n",
     "\n",
     "    logger.info(json.dumps(logs, indent=4))\n",
     "\n",
-    "    print(report)"
+    "    print(result['classification_report'])\n",
+    "\n",
+    "\n",
+    "    print(result)"
    ],
    "metadata": {
     "collapsed": false,
