Mininal changes in embeddings part

--- a/notebook/MenuNER.ipynb
+++ b/notebook/MenuNER.ipynb
@@ -148,6 +148,7 @@
     "opt = edict({\n",
     "        'data_dir' : '/content/MenuNER/data/menu',\n",
     "        'bert_checkpoint' : '/content/drive/MyDrive/DNLP_Polito/Dataset/Embeddings/bert_plus_eps',\n",
+    "        'pos2ix_path' : '/content/drive/MyDrive/DNLP_Polito/pos2ix.json',\n",
     "        'seed' : 1000,\n",
     "        'train' : 'train.txt',\n",
     "        'max_length' : 512,\n",
@@ -251,7 +252,7 @@
     "                           max_length=opt.max_length,\n",
     "                           embedding_dim=768,\n",
     "                           hidden_dim=512,\n",
-    "                           pos2ix=pos2ix(train_examples),\n",
+    "                           pos2ix=pos2ix(train_examples, opt.pos2ix_path),\n",
     "                           pos_embedding_dim=opt.pos_embedding_dim,\n",
     "                           pos=opt.pos,\n",
     "                           char=opt.char,\n",
@@ -403,7 +404,7 @@
     "opt = edict({\n",
     "        'data_dir' : '/content/MenuNER/data/menu',\n",
     "        'test' : 'test.txt',\n",
-    "        'pos2ix' : '/content/MenuNER/data/pos2ix_dict.json',\n",
+    "        'pos2ix_path' : '/content/MenuNER/data/pos2ix_dict.json',\n",
     "        'model_path' : '/content/MenuNER/data/model_checkpoint.pt',\n",
     "        'bert_checkpoint' : '/content/MenuNER/data/bert_checkpoint',\n",
     "        'max_length' : 512,\n",
@@ -485,7 +486,7 @@
     "    else:\n",
     "        device = torch.device('cpu')\n",
     "\n",
-    "    with open(opt.pos2ix, 'r') as f:\n",
+    "    with open(opt.pos2ix_path, 'r') as f:\n",
     "        pos2ix = json.load(f)\n",
     "\n",
     "    model = BiLSTM_CRF(tagset_size=len(tag_to_idx),\n",
